# docstore_ui

./: README.md
docserver/: .gitignore  Cargo.toml
docserver/src/: config.rs  lib.rs  main.rs  tests.rs
docserver/src/config/: constants.rs  mod.rs
docserver/src/db/: connection.rs  mod.rs  models.rs  schema.rs  schema.sql
docserver/src/routes/: clients.rs  config.rs  files.rs  mod.rs
docserver/tests/: db_tests.rs
docstore_ui/: components.json  package.json  pnpm-lock.yaml  vite.config.js
docstore_ui/.svelte-kit/: ambient.d.ts
docstore_ui/.svelte-kit/types/: route_meta_data.json
docstore_ui/.svelte-kit/types/src/routes/: $types.d.ts
docstore_ui/.svelte-kit/types/src/routes/[client_id]/upload/: $types.d.ts
docstore_ui/src/: app.html
docstore_ui/src/lib/: index.js
docstore_ui/src/lib/api/: clients.js  config.js  returns.js  types.js
docstore_ui/src/lib/components/: sidebar.svelte
docstore_ui/src/lib/components/ui/card/: card.svelte
docstore_ui/src/lib/components/ui/select/: select-content.svelte  select-item.svelte  select-trigger.svelte
docstore_ui/src/lib/components/ui/table/: table-head.svelte
docstore_ui/src/routes/: +layout.svelte  +page.svelte
docstore_ui/src/routes/[client_id]/upload/: +page.svelte  +page.test.js.bak
docstore_ui/src/routes/clients/: +page.svelte
docstore_ui/src/routes/docs/: +page.svelte
docstore_ui/src/routes/returns/: +page.svelte
docstore_ui/src/routes/settings/: +page.svelte
