[package]
name = "docserver"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
rocket-multipart-form-data = "0.10.7"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10.0"
